<resources>
    <string name="app_name">FastyBites</string>
    <string name="heading">Fasty Bites</string>
    <string name="subheading1">Order Type</string>
    <string name="sh1_opt1">Pickup</string>
    <string name="sh1_opt2">Delivery</string>
    <string name="hint1">Enter Name</string>
    <string name="hint2">Enter Delivery Address</string>
    <string name="EstimatedTime">Estimated Time: 30mins</string>
    <string name="FoodItem1">Margherita Pizza</string>
    <string name="FoodItem2">Classic Burger</string>
    <string name="FoodItem3">Crispy Fries</string>
    <string name="FoodItem4">Club Sandwich</string>
    <string name="price_FoodItem1">$12.99</string>
    <string name="price_FoodItem2">$8.99</string>
    <string name="price_FoodItem3">$4.99</string>
    <string name="price_FoodItem4">$7.99</string>
    <string name="price_FoodItem1_Value">12.99</string>
    <string name="price_FoodItem2_Value">8.99</string>
    <string name="price_FoodItem3_Value">4.99</string>
    <string name="price_FoodItem4_Value">7.99</string>
    <string name="subheading2">Payment Method</string>
    <string name="sh2_opt1">Cash</string>
    <string name="sh2_opt2">Card</string>
    <string name="btn_OrderNow">Order Now</string>
    <string name="btn_Clear">Clear</string>
    <string name="qty_FoodItem1">0</string>
    <string name="qty_FoodItem2">0</string>
    <string name="qty_FoodItem3">0</string>
    <string name="qty_FoodItem4">0</string>
    <string name="btn_AddItem">Add Item</string>
    <string name="btn_RemoveItem">Remove Item</string>
    <string name="tvSlogan">From Kitchen to Craving in No Time</string>
    <string name="dialogue_Title">Confirmation</string>
    <string name="dialogue_Confirmation">Are you sure you want to reset your order?</string>
    <string name="dialogue_Positive">Yes</string>
    <string name="dialogue_Negative">No</string>
    <string name="summaryscreen_Heading">Order Summary</string>
    <string name="summaryscreen_Subheading1">Customer Information</string>
    <string name="summaryscreen_tv_name">Name</string>
    <string name="summaryscreen_tv_address">Address</string>
    <string name="summaryscreen_Subheading2">Order Details</string>
    <string name="summaryscreen_Subheading3">Total Bill</string>
    <string name="btn_ShareOrderDetails">Share Order Details</string>
    <string name="btn_Done">Done</string>
</resources>