<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogue_Title"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginVertical="15dp"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogue_Confirmation"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginVertical="15dp"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/dialogue_Positive"
        android:id="@+id/btnYes"
        android:layout_marginHorizontal="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/dialogue_Negative"
        android:id="@+id/btnNo"
        android:layout_margin="10dp"
        />


</LinearLayout>