<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_AppName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/heading"
            android:text="@string/heading"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:paddingStart="20dp" />

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_subheading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/subheading1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="10sp" />

            <RadioGroup
                android:id="@+id/rg_subheading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_subheading1_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButtonStyle"
                    android:text="@string/sh1_opt1"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <RadioButton
                    android:id="@+id/rb_subheading1_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButtonStyle"
                    android:text="@string/sh1_opt2"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"/>
            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_tiet_textfield1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tiet_textfield1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_textfield1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint1"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:inputType="textPersonName"
                        android:ellipsize="none"
                        android:imeOptions="flagNoExtractUi"
                        android:paddingVertical="20dp"
                        android:paddingHorizontal="20dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_tiet_textfield2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="15dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_tiet_textfield2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_textfield2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint2"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:inputType="textPostalAddress"
                        android:ellipsize="none"
                        android:imeOptions="flagNoExtractUi"
                        android:paddingVertical="20dp"
                        android:paddingHorizontal="20dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_ETA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EstimatedTime"
                android:layout_marginHorizontal="20dp"
                android:paddingStart="10sp"/>

            <RelativeLayout
                android:id="@+id/rl_FoodItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" >
                <ListView
                    android:id="@+id/lv_food_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="8dp"
                    android:padding="10dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_subheading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subheading2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginHorizontal="20dp" />

            <RadioGroup
                android:id="@+id/rg_subheading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/rb_subheading2_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButtonStyle"
                    android:text="@string/sh2_opt1"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <RadioButton
                    android:id="@+id/rb_subheading2_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/RadioButtonStyle"
                    android:text="@string/sh2_opt2"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"/>
            </RadioGroup>

            <LinearLayout
                android:id="@+id/ll_btns_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/btn_Clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:text="@string/btn_Clear" />
                <Button
                    android:id="@+id/btn_OrderNow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/heading"
                    android:text="@string/btn_OrderNow" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
