<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summaryFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryFragment">

    <!-- ScrollView wraps everything to enable scrolling -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ll_Summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <!-- Heading -->
            <TextView
                android:id="@+id/tv_AppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/heading"
                android:text="@string/summaryscreen_Heading"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:padding="20dp" />

            <!-- Card with Name, OrderType, Address, Payment -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summaryscreen_Subheading1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="20dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summaryscreen_tv_name"
                        android:layout_marginHorizontal="20dp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="5dp">
                        <TextView
                            android:id="@+id/tv_Name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subheading1"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="20dp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="5dp">
                        <TextView
                            android:id="@+id/tv_OrderType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summaryscreen_tv_address"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="20dp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="5dp">
                        <TextView
                            android:id="@+id/tv_Address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/subheading2"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="20dp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginBottom="15dp"
                        app:cardCornerRadius="5dp">
                        <TextView
                            android:id="@+id/tv_PaymentMethod"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card with ListView -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/summaryscreen_Subheading2"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginVertical="10dp"
                        android:layout_marginHorizontal="20dp" />

                    <ListView
                        android:id="@+id/lv_summaryItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="8dp"
                        android:paddingHorizontal="10dp"
                        android:nestedScrollingEnabled="false" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Total Bill -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summaryscreen_Subheading3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:id="@+id/tv_TotalBill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rs. 0"
                    android:textStyle="bold"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <!-- Buttons -->
            <Button
                android:id="@+id/btnShareOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_ShareOrderDetails"
                android:backgroundTint="@color/btnShare" />

            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_Done"
                android:backgroundTint="@color/btnShare" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
